--- a/src/pages/CharacterDetails/CharacterDetails.module.css
+++ b/src/pages/CharacterDetails/CharacterDetails.module.css
@@ -1,7 +1,11 @@
+.container__details {
+  padding: 23px 0;
+}
 .character__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 23px;
 }
 .character__image {
   border-radius: 50%;
@@ -29,14 +33,25 @@
 .character__list {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-width: 416px;
 }
 .character__item {
-  min-height: 100%;
+  padding: 9px 16px 12px 9px;
+  border-bottom: 1px solid;
+  /* min-height: 100%; */
 }
 
 .button {
   margin-bottom: 32px;
+  cursor: pointer;
   background-color: transparent;
   border: none;
+
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #000000;
 }
