--- a/src/components/CharactersList/CharactersList.module.scss
+++ b/src/components/CharactersList/CharactersList.module.scss
@@ -1,17 +1,25 @@
+.characters__wrap {
+  display: flex;
+  justify-content: center;
+}
+
 .characters__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 20px;
   padding-bottom: 86px;
+  max-width: 1020px;
 }
 
 .characters__item {
-  /* display: flex; */
   width: 240px;
-  /* height: 244px; */
+
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media (max-width: 540px) {
+    width: 312px;
+  }
 }
 
 .characters__item:hover {
@@ -19,7 +27,7 @@
   /* box-shadow: 2px 2px 3px 3px rgb(255 107 8 / 50%); */
 }
 
-.characters__wrap {
+.character__wrap {
   display: flex;
   flex-direction: column;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12),
@@ -30,9 +38,12 @@
 
 .characters__image {
   height: 168px;
-  width: 240;
+  // width: 240;
   object-fit: cover;
   border-radius: 4px 4px 0 0;
+  @media (max-width: 540px) {
+    height: 232px;
+  }
 }
 
 .character__info {
