--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,25 @@
+@import-normalize;
+
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url('./fonts/Roboto-Bold.ttf') format('truetype');
+  src: url('./fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
-  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('./fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('./fonts/Roboto-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Karla';
+  src: url('./fonts/Karla-Bold.ttf') format('truetype');
+  font-weight: 700;
 }
 
 body {
