--- a/src/components/CharactersList/CharactersList.module.css
+++ b/src/components/CharactersList/CharactersList.module.css
@@ -10,17 +10,19 @@
   gap: 20px;
   padding-bottom: 86px;
   max-width: 1020px;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .characters__list {
     gap: 32px;
   }
 }
 
 .characters__item {
   width: 240px;
-
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  @media (max-width: 540px) {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (max-width: 540px) {
+  .characters__item {
     width: 312px;
   }
 }
@@ -33,18 +35,19 @@
 .character__wrap {
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12),
-    0px 2px 4px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
   border-radius: 4px;
   height: 100%;
 }
 
 .characters__image {
   height: 168px;
-  // width: 240;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 4px 4px 0 0;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .characters__image {
     height: 232px;
   }
 }
@@ -56,7 +59,7 @@
 }
 
 .character__name {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -66,11 +69,11 @@
 }
 
 .character__specie {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: 0.25px;
   color: rgba(0, 0, 0, 0.6);
-}
+}/*# sourceMappingURL=CharactersList.module.css.map */
