--- a/src/pages/CharacterDetails/CharacterDetails.module.css
+++ b/src/pages/CharacterDetails/CharacterDetails.module.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   align-items: center;
   padding: 32px 0;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .character__wrapper {
     padding: 78px 0;
   }
 }
@@ -12,7 +14,9 @@
   border-radius: 50%;
   width: 300px;
   margin-bottom: 16px;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .character__image {
     width: 150px;
     margin-bottom: 34px;
   }
@@ -25,10 +29,11 @@
   display: flex;
   align-items: center;
   text-align: center;
-
   color: #081f32;
   margin-bottom: 48px;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .character__name {
     font-size: 32px;
     line-height: 1.19;
     margin-bottom: 34px;
@@ -42,7 +47,9 @@
   letter-spacing: 0.15px;
   color: #8e8e93;
   margin-bottom: 48px;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .character__subtitle {
     margin-bottom: 16px;
   }
 }
@@ -51,7 +58,9 @@
   display: flex;
   flex-direction: column;
   min-width: 413px;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .character__list {
     min-width: 312px;
   }
 }
@@ -80,20 +89,19 @@
 .button {
   margin-left: 40px;
   margin-top: 23px;
-
   cursor: pointer;
   background-color: transparent;
   border: none;
-
-  font-family: 'Karla';
+  font-family: "Karla";
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 21px;
-
   color: #000000;
-  @media (max-width: 540px) {
+}
+@media (max-width: 540px) {
+  .button {
     margin-left: 4px;
     margin-top: 25px;
   }
-}
+}/*# sourceMappingURL=CharacterDetails.module.css.map */
