--- a/src/components/CharactersList/CharactersList.module.css
+++ b/src/components/CharactersList/CharactersList.module.css
@@ -4,16 +4,26 @@
 }
 
 .characters__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 20px;
+  display: grid;
+  gap: 32px;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(1, 1fr);
   padding-bottom: 86px;
-  max-width: 1020px;
 }
-@media (max-width: 540px) {
+@media (min-width: 540px) {
   .characters__list {
-    gap: 32px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
+}
+@media (min-width: 799px) {
+  .characters__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1100px) {
+  .characters__list {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
