--- a/src/components/CharactersList/CharactersList.module.scss
+++ b/src/components/CharactersList/CharactersList.module.scss
@@ -4,16 +4,36 @@
 }
 
 .characters__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 20px;
+  display: grid;
+  gap: 32px;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(1, 1fr);
   padding-bottom: 86px;
-  max-width: 1020px;
-  @media (max-width: 540px) {
-    gap: 32px;
+
+  @media (min-width: 540px) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
+
+  @media (min-width: 799px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: 1100px) {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
+// .characters__list {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: space-evenly;
+//   gap: 20px;
+//   padding-bottom: 86px;
+//   max-width: 1020px;
+//   @media (max-width: 540px) {
+//     gap: 32px;
+//   }
+// }
 
 .characters__item {
   width: 240px;
