--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -20,14 +20,18 @@
 
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   padding: 16px;
   padding-left: 48px;
 
-  color: rgba(0, 0, 0, 0.5);
+  color: black;
 }
+
+// input[type='text'] {
+//   font-size: 20px;
+// }
 
 .input__icon {
   position: absolute;
