--- a/src/components/LoginWithGoogle/LoginWithGoogle.module.css
+++ b/src/components/LoginWithGoogle/LoginWithGoogle.module.css
@@ -9,4 +9,10 @@
 
 .auth__title {
   text-align: center;
+}
+
+@media (max-width: 540px) {
+  .auth__animation {
+    width: 312px;
+  }
 }/*# sourceMappingURL=LoginWithGoogle.module.css.map */
