--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,25 @@
   font-family: "Roboto";
   src: url("./fonts/Roboto-Regular.ttf") format("truetype");
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
   src: url("./fonts/Roboto-Medium.ttf") format("truetype");
   font-weight: 500;
+  font-display: swap;
 }
 @font-face {
   font-family: "Roboto";
   src: url("./fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
+  font-display: swap;
 }
 @font-face {
   font-family: "Karla";
   src: url("./fonts/Karla-Bold.ttf") format("truetype");
   font-weight: 700;
+  font-display: swap;
 }
 body {
   margin: 0;
