--- a/src/index.scss
+++ b/src/index.scss
@@ -4,22 +4,26 @@
   font-family: 'Roboto';
   src: url('./fonts/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
   src: url('./fonts/Roboto-Medium.ttf') format('truetype');
   font-weight: 500;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
   src: url('./fonts/Roboto-Bold.ttf') format('truetype');
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Karla';
   src: url('./fonts/Karla-Bold.ttf') format('truetype');
   font-weight: 700;
+  font-display: swap;
 }
 
 body {
@@ -27,6 +31,7 @@ body {
   font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // background-color:beige;
 }
 
 code {
