--- a/src/components/CharactersList/CharactersList.module.css
+++ b/src/components/CharactersList/CharactersList.module.css
@@ -50,6 +50,7 @@
 
 .characters__image {
   height: 168px;
+  width: 240;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 4px 4px 0 0;
