--- a/src/components/CharactersList/CharactersList.module.scss
+++ b/src/components/CharactersList/CharactersList.module.scss
@@ -59,7 +59,7 @@
 
 .characters__image {
   height: 168px;
-  // width: 240;
+  width: 240;
   object-fit: cover;
   border-radius: 4px 4px 0 0;
   @media (max-width: 540px) {
