--- a/src/index.css
+++ b/src/index.css
@@ -52,4 +52,15 @@ li {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+button {
+  display: flex;
+  padding: 10px;
+  gap: 5px;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
 }/*# sourceMappingURL=index.css.map */
